--- a/WebHoaHuongDuong/WebHoaHuongDuong/Views/Shared/_Footer.cshtml
+++ b/WebHoaHuongDuong/WebHoaHuongDuong/Views/Shared/_Footer.cshtml
@@ -1,37 +1,30 @@
-﻿ <div class="footer">
-         <div class="box_footer">
+﻿<div class="footer">
+        <div class="box_footer">
             <ul class="menu_bot">
-               <li><a href="http://mapu.vn/home/">TRANG CHỦ</a></li>
-               <li><a href="http://mapu.vn/gioi_thieu/">GIỚI THIỆU</a></li>
-               <li><a href="http://mapu.vn/san_pham/">SẢN PHẨM</a></li>
-               <li><a href="http://mapu.vn/tin-tuc-2.html">TIN TỨC</a></li>
-               <li><a href="http://mapu.vn/lien_he/">LIÊN HỆ</a></li>
-               <li><a href="http://www.lamchame.com/forum/">DIỄN ĐÀN</a></li>
+                <li><a href="http://mapu.vn/home/">TRANG CHỦ</a></li>
+                <li><a href="http://mapu.vn/gioi_thieu/">GIỚI THIỆU</a></li>
+                <li><a href="http://mapu.vn/san_pham/">SẢN PHẨM</a></li>
+                <li><a href="http://mapu.vn/tin-tuc-2.html">TIN TỨC</a></li>
+                <li><a href="http://mapu.vn/lien_he/">LIÊN HỆ</a></li>
+                <li><a href="http://www.lamchame.com/forum/">KHUYẾN MÃI</a></li>
             </ul>
             <div class="clear"></div>
             <div class="menu_bottom relative">
-               <ul class="">
-               </ul>
+                <ul class="">
+                </ul>
             </div>
             <div class="clear"></div>
+
             <div class="content_footer">
-               <p>&nbsp;</p>
-               <div style="text-align: center;">&nbsp;</div>
-               <div style="text-align: center;"><img alt="" src="images/LogoBCT1.png" style="width: 200px; height: 133px; float: left;" /></div>
-               <div style="text-align: center;">&nbsp;</div>
-               <div style="text-align: center;"><img alt="" src="images/logo(1).png" style="width: 300px; height: 150px;" />&nbsp;<img alt="" src="images/vietcombank.jpg" style="width: 186px; height: 184px; float: right;" /></div>
-               <div style="text-align: center;"><span style="color:rgb(0, 0, 0);"><span style="font-size:16px;"><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </strong></span><span style="font-size:18px;"><strong>Mapu Shop - Chuy&ecirc;n h&agrave;ng x&aacute;ch tay &Uacute;c</strong><br  />
-                  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;<span style="font-size:16px;">Địa chỉ: &nbsp;412 Trương Định - Ho&agrave;ng Mai - H&agrave; Nội<br  />
-                  &nbsp; &nbsp; Hotline: 0986 70 83 84</span></span>
-                  </span>
-               </div>
-               <div style="text-align: center;"><span style="font-size:16px;"><span style="color:rgb(0, 0, 0);">043.6622881<br  />
-                  Email: </span>Nhmy2497@yahoo.com</span>
-               </div>
+                <div style="text-align: center;">
+                	<img alt="" src="images/logo.jpg" style="width: 150px; height: 150px;"/>;
+                </div>
+                <div style="text-align: center;"">
+                	<span style="font-size:18px;"><strong>Shop Hoa Hướng Dương - Chuyên hàng xách tay chính hãng</strong> </span><br/>
+                  	<span style="font-size:16px;">Địa chỉ: Hồ Chí Minh. Hotline: 01234 567 890</span> <br/>
+                  	<span style="font-size:16px;">Email: abc@yahoo.com</span> <br/>
+                  	<span style="font-size:16px;">Thông tin chuyển khoản: Ngân hàng Vietcombank: 1234567890</span>
+                </div>
             </div>
-            <div class="develop">
-               <p class='develop' style='font-size:12px'><a href='http://webbnc.net' title='Thiết kế web'>Thiết kế web</a> bởi <a href='http://webbnc.net' title='Thiết kế web'>WebBNC.net</a></p>
-            </div>
-         </div>
-      </div>
-      <!--footer-->
+        </div>
+</div>
