--- a/WebHoaHuongDuong/WebHoaHuongDuong/Views/Shared/_Layout.cshtml
+++ b/WebHoaHuongDuong/WebHoaHuongDuong/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     <div id="fb-root"></div>
     <div class="bg-top">
         @{Html.RenderPartial("_Header");}
-        @{Html.RenderPartial("_TopMenu");}
+        @{Html.RenderAction("_TopMenu", "Helper");}
     </div>
     <div class="clear"></div>
 
